--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<main class="main">
-  <div class="content">
-    <router-outlet />
-  </div>
-</main>
+<div class="m-4">
+    <app-layout />
+</div>
