--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,1 +1,5 @@
-<p>page-not-found works!</p>
+<div class="container mt-4">
+    <div class="d-flex flex-column align-items-center justify-content-center h-[90vh]">
+        <h1>Sorry, the page you are looking for does not exist.</h1>
+    </div>
+</div>
