--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,7 +13,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let post of displayedPosts">
+      <tr *ngFor="let post of displayedPosts; trackBy: trackByBookId">
         <td>
           <ng-container [ngTemplateOutlet]="userContext"
             [ngTemplateOutletContext]="{$implicit: users | user : post.userId }">
